--- a/blog/templates/pages/iletisim.html
+++ b/blog/templates/pages/iletisim.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>İletişim</title>
-  </head>
-  <body>
-    <h1>{{sayfa}}</h1>
-  </body>
-</html>
+{% extends "base.html" %}
+
+<br />
+{% block title %} Ansayfa {% endblock %}
+
+<br />
+{% block content %} iletişim formu {% endblock %}
